--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^14.2.0
   provider: ^6.1.2
   google_fonts: ^6.2.1
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
