--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_switch: ^0.3.2
   flutter_local_notifications: ^17.2.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
