--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_local_notifications: ^17.2.1
   image_picker: ^1.1.2
   intl: ^0.19.0
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
