--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   fl_chart: ^0.68.0
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
